--- a/relaxation-journal/src/Components/style.css
+++ b/relaxation-journal/src/Components/style.css
@@ -30,6 +30,17 @@ header {
   text-align: center;
 }
 
+.toggle {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  padding: 8px 12px;
+}
+
 .container {
   padding: .75rem;
   margin: 0 auto;
@@ -61,13 +72,13 @@ nav .logo img {
   border-radius: 50%;
 }
 
-nav ul {
+nav ul, ul {
   padding: 0;
   list-style-type: none;
   margin: 0;
 }
 
-nav ul li {
+nav ul li, li {
   border-bottom: 2px solid rgba(200, 200, 200, 0.1);
   padding: 20px;
 }
@@ -77,17 +88,28 @@ nav ul li:hover {
   cursor: pointer;
 }
 
-nav ul li:first-of-type {
+nav ul li:first-of-type, li:first-of-type {
   border-top: 2px solid rgba(200, 200, 200, 0.1);
 }
 
-.toggle {
-  background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  padding: 8px 12px;
+.page {
+  /* width: 37.5rem; */
+  margin: 0 auto;
 }
+
+.page h2 {
+  text-align: center;
+}
+
+.reducingTheTension {
+  text-align: center;
+}
+
+.calmBreathing {
+  font-weight: bold;
+}
+
+.calmBreathing .instructions {
+  text-decoration: underline;
+}
+
