--- a/relaxation-journal/src/Components/style.css
+++ b/relaxation-journal/src/Components/style.css
@@ -3,6 +3,7 @@
 :root {
   --primary-color: #30336b;
   --secondary-color: #be2edd;
+  --list-border-color: rgba(200, 200, 200, 0.1);
 }
 
 * {
@@ -50,13 +51,13 @@ header {
 
 nav {
   background-color: var(--primary-color);
-  border-right: 2px solid rgba(200, 200, 200, 0.1);
+  border-right: 2px solid var(--list-border-color);
   color: #fff;
   position: fixed;
   top: 0;
   left: 0;
   width: 12.5rem;
-  height: 100vh;
+  height: 120vh;
   z-index: 100;
   transform: translateX(-100%);
 }
@@ -81,7 +82,7 @@ ul {
 
 nav ul li,
 li {
-  border-bottom: 2px solid rgba(200, 200, 200, 0.1);
+  border-bottom: 2px solid var(--list-border-color);
   padding: 20px;
 }
 
@@ -93,12 +94,10 @@ nav ul li:hover,
 
 nav ul li:first-of-type,
 li:first-of-type {
-  border-top: 2px solid rgba(200, 200, 200, 0.1);
+  border-top: 2px solid var(--list-border-color);
 }
 
-/* Pages */
 .page {
-  /* width: 37.5rem; */
   margin: 0 auto;
 }
 
@@ -135,7 +134,7 @@ li:first-of-type {
 
 /* Body Scan */
 .feelingWheelLink {
-  color: blue;
+  color: var(--secondary-color);
 }
 
 /* Feeling Wheel */
@@ -151,38 +150,46 @@ li:first-of-type {
 }
 
 /* Daily Relaxation Log */
-.page table {
-  margin: 0 auto;
-  border: 1px solid black;
-  border-collapse:collapse;
+.radios {
+  display: flex;
+  justify-content: space-between;
 }
 
-th, td {
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+h5 {
+  margin: 1rem 0;
 }
 
-.dow{
-margin: 0;
-padding: 0;
+.whatWentWellToday li {
+  border: none;
 }
 
-.thtr {
-  border-right: 1px solid black;
+textarea {
+  width: 100%;
 }
 
-.calmBreathingRow {
-  border-top: 1px solid black;
+.feeling {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 }
 
-th {
-  width: 4.5rem;
+.feeling input {
+  border-radius: 5px;
+  padding: .25rem;
 }
 
-td {
-  border-right: 1px solid black;
-  text-align: center;
-  width: 4.5rem;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
+.addEntry {
+  padding: 12px 30px;
+  background-color: var(--secondary-color);
+  border: 0;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 2rem;
+}
