commit before introducing user moder

--- a/relaxation-journal/src/Components/style.css
+++ b/relaxation-journal/src/Components/style.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Lato', sans-serif !important;
   margin: 0 !important;
   transition: transform 0.3s ease;
-  background: red !important;
+  /* background: red !important; */
 }
 
 body.show-nav {
