update calmbreathing page

--- a/relaxation-journal/src/Components/style.css
+++ b/relaxation-journal/src/Components/style.css
@@ -184,7 +184,11 @@ li:first-of-type {
   text-align: center;
 }
 
-.calmBreathing .instructions {
+.description {
+  text-align: center;
+}
+
+.instructions {
   text-decoration: underline;
 }
 
