--- a/relaxation-journal/src/Components/pages/calmbreathing/style.css
+++ b/relaxation-journal/src/Components/pages/calmbreathing/style.css
@@ -8,16 +8,14 @@
   background: #224941 url('./img/bg.jpg') no-repeat center center/cover;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
-  /* min-height: 100vh; */
-  /* overflow: hidden; */
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 1rem 0;
   width: 100%;
-  height: 520px;
-  border: 4px solid rgb(118, 118, 118);
-  border-radius: 4px;
+  height: 475px;
+  border: 8px solid rgb(118, 118, 118);
+  border-radius: 6px;
 }
 
 .relaxer-container {
@@ -29,7 +27,7 @@
   width: 375px;
   position: relative;
   transform: scale(1);
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
 }
 
 .circle {
